# Bearpi-Nano-Lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  requirements.txt
backend/backend/: asgi.py  settings.py  test_settings.py  urls.py  views.py
firmware/my_bearpi_lab_http/: BUILD.gn  README.md
firmware/my_bearpi_lab_http/include/: E53_IA1.h  bearpi_lab_config.h  wifi_connect.h
firmware/my_bearpi_lab_http/src/: E53_IA1.c  bearpi_lab_http_client.c  wifi_connect.c
firmware/my_button/: BUILD.gn  button_example.c
firmware/my_event/: BUILD.gn  event_example.c
firmware/my_first_app/: BUILD.gn  hello_world.c
firmware/my_led/: BUILD.gn  led_example.c
firmware/my_led_blink/: BUILD.gn  led_example.c
firmware/my_message/: BUILD.gn  message_example.c
firmware/my_mqtt/: iot_mqtt.c
firmware/my_mutex/: BUILD.gn  mutex_example.c
firmware/my_pwm_led/: BUILD.gn  pwm_example.c
firmware/my_semaphore/: BUILD.gn  semaphore_example.c
firmware/my_tcp_server/: tcp_server_demo.c
firmware/my_thread/: BUILD.gn  thread_example.c
firmware/my_timer/: BUILD.gn  timer_example.c
firmware/my_udp_client/: udp_client_demo.c
firmware/my_wifi_ap/: wifi_ap.c
firmware/my_wifi_sta_connect/: wifi_sta_connect.c
frontend/: .env.example  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
mobile/: .gitignore  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/src/: App.vue  manifest.json  pages.json  uni.scss
(+126 files in other folders)
