static_library("bearpi_lab_http") {
  sources = [
    "src/bearpi_lab_http_client.c",
    "src/wifi_connect.c",
    "src/E53_IA1.c",
  ]

  cflags = [ "-Wno-unused-variable" ]
  cflags += [ "-Wno-unused-but-set-variable" ]

  include_dirs = [
    "//utils/native/lite/include",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//base/iot_hardware/interfaces/kits/wifiiot_lite",
    "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
    "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
    "include",
  ]
}

